<resources>
    <string name="app_name">Database</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_back">назад</string>
    <string name="send_btn">Отправить</string>
    <string name="save_str">Сохранить</string>
    <string name="urlImage">Url-изображения</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Имя</string>
    <string name="inpData">Введите данные:</string>
    <string name="update_btn">Обновить</string>
    <string name="delete">удалить</string>
</resources>